--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Met4FoF-Redundancy</h1>
+<p>This is the website for the Met4FoF-redundancy package. It is currently still under development. For more information on the package, please refer to the following sites:</p>
+<ul>
+<li><a href="https://github.com/gertjan123/Met4FoF-redundancy/">Github site</a></li>
+<li><a href="https://met4fof-redundancy.readthedocs.io/en/master/">Read the Docs site</a></li>
+</ul>
+
+
 </body>
 </html>
