--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <h1>Met4FoF-Redundancy</h1>
 <p>This is the website for the Met4FoF-redundancy package. It is currently still under development. For more information on the package, please refer to the following sites:</p>
 <ul>
-<li><a href="https://github.com/gertjan123/Met4FoF-redundancy/">Github site</a></li>
-<li><a href="https://met4fof-redundancy.readthedocs.io/en/master/">Read the Docs site</a></li>
+<li><a href="https://github.com/gertjan123/Met4FoF-redundancy/">GitHub page</a></li>
+<li><a href="https://met4fof-redundancy.readthedocs.io/en/master/">ReadTheDocs page</a></li>
 </ul>
 
 
