--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
 <body>
 <h1>Met4FoF-Redundancy</h1>
 
-[![CircleCI](https://circleci.com/gh/PTB-PSt1/PyDynamic.svg?style=shield)](https://circleci.com/gh/PTB-PSt1/PyDynamic)
-[![Codacy Badge](https://api.codacy.com/project/badge/Grade/397eebc52073457a824e5657c305dc92)](https://www.codacy.com/app/PTB-PSt1/PyDynamic?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=PTB-PSt1/PyDynamic&amp;utm_campaign=Badge_Grade)
-[![Documentation Status](https://met4fof-redundancy.readthedocs.io/en/master/)](https://met4fof-redundancy.readthedocs.io/en/master/)
-[![Codecov Badge](https://codecov.io/gh/PTB-PSt1/PyDynamic/branch/master/graph/badge.svg)](https://codecov.io/gh/PTB-PSt1/PyDynamic)
-[![DOI](https://zenodo.org/badge/34848642.svg)](https://zenodo.org/badge/latestdoi/34848642)
 
 <p><a href="https://circleci.com/gh/PTB-PSt1/PyDynamic"><img src="https://circleci.com/gh/PTB-PSt1/PyDynamic.svg?style=shield" alt="CircleCI" /></a>
 <a href="https://www.codacy.com/app/PTB-PSt1/PyDynamic?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=PTB-PSt1/PyDynamic&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/397eebc52073457a824e5657c305dc92" alt="Codacy Badge" /></a>
 <a href="https://pydynamic.readthedocs.io/?badge=latest"><img src="https://readthedocs.org/projects/pydynamic/badge/?version=latest" alt="Documentation Status" /></a>
 <a href="https://codecov.io/gh/PTB-PSt1/PyDynamic"><img src="https://codecov.io/gh/PTB-PSt1/PyDynamic/branch/master/graph/badge.svg" alt="Codecov Badge" /></a>
 <a href="https://zenodo.org/badge/latestdoi/34848642"><img src="https://zenodo.org/badge/34848642.svg" alt="DOI" /></a></p>
-<a href="https://met4fof-redundancy.readthedocs.io/?badge=latest"><img src="https://met4fof-redundancy.readthedocs.io/badge/?version=latest" alt="Documentation Status" /></a>
-
+<a href="https://readthedocs.org/projects/met4fof-redundancy/badge/"><img src="https://readthedocs.org/projects/met4fof-redundancy/badge/" alt="Documentation Status" /></a>
+<a href='https://met4fof-redundancy.readthedocs.io/en/master/?badge=master'>
+    <img src='https://readthedocs.org/projects/met4fof-redundancy/badge/?version=master' alt='Documentation Status' />
+</a>
 
 <p>This is the website for the Met4FoF-redundancy package. It is currently still under development. For more information on the package, please refer to the following sites:</p>
 <ul>
