--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
 <h1>Met4FoF-Redundancy</h1>
 
 
-<p><a href="https://circleci.com/gh/PTB-PSt1/PyDynamic"><img src="https://circleci.com/gh/PTB-PSt1/PyDynamic.svg?style=shield" alt="CircleCI" /></a>
-<a href="https://www.codacy.com/app/PTB-PSt1/PyDynamic?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=PTB-PSt1/PyDynamic&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/397eebc52073457a824e5657c305dc92" alt="Codacy Badge" /></a>
-<a href="https://pydynamic.readthedocs.io/?badge=latest"><img src="https://readthedocs.org/projects/pydynamic/badge/?version=latest" alt="Documentation Status" /></a>
-<a href="https://codecov.io/gh/PTB-PSt1/PyDynamic"><img src="https://codecov.io/gh/PTB-PSt1/PyDynamic/branch/master/graph/badge.svg" alt="Codecov Badge" /></a>
-<a href="https://zenodo.org/badge/latestdoi/34848642"><img src="https://zenodo.org/badge/34848642.svg" alt="DOI" /></a></p>
-<a href="https://readthedocs.org/projects/met4fof-redundancy/badge/"><img src="https://readthedocs.org/projects/met4fof-redundancy/badge/" alt="Documentation Status" /></a>
-<a href='https://met4fof-redundancy.readthedocs.io/en/master/?badge=master'>
-    <img src='https://readthedocs.org/projects/met4fof-redundancy/badge/?version=master' alt='Documentation Status' />
-</a>
+<p>
+    <a href='https://met4fof-redundancy.readthedocs.io/en/master/?badge=master'><img src='https://readthedocs.org/projects/met4fof-redundancy/badge/?version=master' alt='Documentation Status' /></a>
+    <a href="https://circleci.com/gh/gertjan123/Met4FoF-redundancy"><img src="https://circleci.com/gh/gertjan123/Met4FoF-redundancy.svg?style=shield"></a>
+
+    <a href="https://www.codacy.com/gh/gertjan123/Met4FoF-redundancy/dashboard?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=gertjan123/Met4FoF-redundancy&amp;utm_campaign=Badge_Grade"><img src="https://app.codacy.com/project/badge/Grade/ad51c2b3f4ee49baa5b4de078a7f3d5d"/></a>
+</p>    
 
 <p>This is the website for the Met4FoF-redundancy package. It is currently still under development. For more information on the package, please refer to the following sites:</p>
 <ul>
