--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Met4FoF-Redundancy</h1>
+<h1>Met4FoF-Redundancy Python Software Package</h1>
 
 
 <p>
@@ -17,6 +17,10 @@
 <li><a href="https://met4fof-redundancy.readthedocs.io/en/master/">ReadTheDocs page</a></li>
 </ul>
 
+    <h2>Acknowledgment</h2>
+<p>This work has been performed in the EMPIR 17IND12 project “Metrology for the Factory of the Future” (<a href="www.met4fof.eu">www.met4fof.eu</a>).
+This project has received funding from the EMPIR programme co-financed by the Participating States and from the European Union's Horizon 2020 research and innovation programme.
+    </p>    
 
 </body>
 </html>
