--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <p>
     <a href='https://met4fof-redundancy.readthedocs.io/en/master/?badge=master'><img src='https://readthedocs.org/projects/met4fof-redundancy/badge/?version=master' alt='Documentation Status' /></a>
     <a href="https://circleci.com/gh/gertjan123/Met4FoF-redundancy"><img src="https://circleci.com/gh/gertjan123/Met4FoF-redundancy.svg?style=shield"></a>
-
     <a href="https://www.codacy.com/gh/gertjan123/Met4FoF-redundancy/dashboard?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=gertjan123/Met4FoF-redundancy&amp;utm_campaign=Badge_Grade"><img src="https://app.codacy.com/project/badge/Grade/ad51c2b3f4ee49baa5b4de078a7f3d5d"/></a>
+    <a href="https://codecov.io/gh/gertjan123/Met4FoF-redundancy"><img src="https://codecov.io/gh/gertjan123/Met4FoF-redundancy/branch/master/graph/badge.svg?token=4AM461USOL"/></a>    
 </p>    
 
 <p>This is the website for the Met4FoF-redundancy package. It is currently still under development. For more information on the package, please refer to the following sites:</p>
